Add drawing of rectangles and ellipses

--- a/src/Tessera.App/Views/DrawingPageView.axaml
+++ b/src/Tessera.App/Views/DrawingPageView.axaml
@@ -22,12 +22,6 @@
             <Setter Property="Background" Value="#F3F4F6"/>
             <Setter Property="BorderBrush" Value="#D1D5DB"/>
         </Style>
-        <Style Selector="TextBlock.Label">
-            <Setter Property="FontSize" Value="12"/>
-            <Setter Property="FontWeight" Value="SemiBold"/>
-            <Setter Property="Foreground" Value="#374151"/>
-            <Setter Property="VerticalAlignment" Value="Center"/>
-        </Style>
     </UserControl.Styles>
     
     <Grid 
@@ -139,11 +133,13 @@
                    </ItemsControl.ItemsPanel>
                    <ItemsControl.ItemTemplate>
                        <dt:ShapeTemplateSelector>
-                           <DataTemplate x:Key="PointShape" DataType="{x:Type vm:EllipseShape}">
+                           <DataTemplate x:Key="EllipseShape" DataType="{x:Type vm:EllipseShape}">
                                <Ellipse
+                                   Width="{Binding Width}"
+                                   Height="{Binding Height}"
+                                   Stroke="{Binding StrokeColor}"
                                    Fill="{Binding Color}"
-                                   Width="{Binding Size}"
-                                   Height="{Binding Size}"/>
+                                   StrokeThickness="{Binding StrokeThickness}" />
                            </DataTemplate>
                            <DataTemplate x:Key="LineShape" DataType="{x:Type vm:LineShape}">
                                <Line
@@ -157,6 +153,7 @@
                                    Width="{Binding Width}"
                                    Height="{Binding Height}"
                                    Stroke="{Binding StrokeColor}"
+                                   Fill="{Binding Color}"
                                    StrokeThickness="{Binding StrokeThickness}" />
                            </DataTemplate> 
                        </dt:ShapeTemplateSelector>
@@ -181,84 +178,9 @@
                         FontSize="16" 
                         VerticalAlignment="Center"/>
                 </Grid>
-                <ScrollViewer Grid.Row="1" >
-                    <ContentControl Content="{Binding SelectedToolItem.ToolSettings}">
-                        <ContentControl.DataTemplates>
-                            <DataTemplate DataType="{x:Type vm:PointToolSettings}">
-                                <StackPanel>
-                                    <Border
-                                        BorderBrush="#E5E7EB"
-                                        BorderThickness="0,1"
-                                        Padding="20, 7">
-                                        <Grid ColumnDefinitions="*,*"
-                                              Margin="0">
-                                            <TextBlock
-                                                Grid.Column="0"
-                                                Classes="Label"
-                                                Text="Thickness" />
-                                            <NumericUpDown
-                                                Grid.Column="1"
-                                                Value="{Binding PointThickness}"
-                                                BorderBrush="#E5E7EB"
-                                                CornerRadius="5"
-                                                ShowButtonSpinner="False"
-                                                Padding="8,8,0,0"/>
-                                        </Grid>
-                                    </Border>
-                                    <Border
-                                        BorderBrush="#E5E7EB"
-                                        BorderThickness="0,0, 0, 1"
-                                        Padding="20, 7">
-                                        <Grid ColumnDefinitions="*,*"
-                                              Margin="0">
-                                            <TextBlock Grid.Column="0" Classes="Label" Text="Color" Margin="0,10,0,6"/>
-                                            <ColorPicker
-                                                Grid.Column="1"
-                                                Color="{Binding PointColor}"
-                                                HorizontalAlignment="Right"/>
-                                        </Grid>
-                                    </Border>
-                                </StackPanel>
-                            </DataTemplate>
-                              <DataTemplate DataType="{x:Type vm:LineToolSettings}">
-                                <StackPanel>
-                                    <Border
-                                        BorderBrush="#E5E7EB"
-                                        BorderThickness="0,1"
-                                        Padding="20, 7">
-                                        <Grid ColumnDefinitions="*,*"
-                                              Margin="0">
-                                            <TextBlock
-                                                Grid.Column="0"
-                                                Classes="Label"
-                                                Text="Thickness" />
-                                            <NumericUpDown
-                                                Grid.Column="1"
-                                                Value="{Binding LineThickness}"
-                                                BorderBrush="#E5E7EB"
-                                                CornerRadius="5"
-                                                ShowButtonSpinner="False"
-                                                Padding="8,8,0,0"/>
-                                        </Grid>
-                                    </Border>
-                                    <Border
-                                        BorderBrush="#E5E7EB"
-                                        BorderThickness="0,0, 0, 1"
-                                        Padding="20, 7">
-                                        <Grid ColumnDefinitions="*,*"
-                                              Margin="0">
-                                            <TextBlock Grid.Column="0" Classes="Label" Text="Color" Margin="0,10,0,6"/>
-                                            <ColorPicker
-                                                Grid.Column="1"
-                                                Color="{Binding LineColor}"
-                                                HorizontalAlignment="Right"/>
-                                        </Grid>
-                                    </Border>
-                                </StackPanel>
-                            </DataTemplate>
-                        </ContentControl.DataTemplates>
-                    </ContentControl>
-                </ScrollViewer>
+               <c:CanvasToolSettings
+                   Grid.Row="1" 
+                   ToolSettings="{Binding SelectedToolItem.ToolSettings}" />
             </Grid>
         </Border>
     </Grid>
