--- a/src/Tessera.App/Controls/CanvasToolSettings.axaml
+++ b/src/Tessera.App/Controls/CanvasToolSettings.axaml
@@ -13,6 +13,9 @@
             <Setter Property="Foreground" Value="#374151"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
         </Style>
+        <Style Selector="ComboBox">
+            <Setter Property="BorderBrush" Value="#E5E7EB" />
+        </Style>
     </UserControl.Styles>
     <ScrollViewer>
         <ContentControl Content="{Binding ToolSettings, RelativeSource={RelativeSource AncestorType=controls:CanvasToolSettings}}">
@@ -67,7 +70,7 @@
                                     Text="Thickness" />
                                 <NumericUpDown
                                     Grid.Column="1"
-                                    Value="{Binding LineThickness}"
+                                    Value="{Binding StrokeThickness}"
                                     BorderBrush="#E5E7EB"
                                     CornerRadius="5"
                                     ShowButtonSpinner="False"
@@ -83,8 +86,76 @@
                                 <TextBlock Grid.Column="0" Classes="Label" Text="Color" Margin="0,10,0,6"/>
                                 <ColorPicker
                                     Grid.Column="1"
-                                    Color="{Binding LineColor}"
+                                    Color="{Binding StrokeColor}"
                                     HorizontalAlignment="Right"/>
+                            </Grid>
+                        </Border>
+                    </StackPanel>
+                </DataTemplate>
+                <DataTemplate DataType="{x:Type vm:PolylineToolSettings}">
+                    <StackPanel>
+                        <Border
+                            BorderBrush="#E5E7EB"
+                            BorderThickness="0,1"
+                            Padding="20, 7">
+                            <Grid ColumnDefinitions="*,*"
+                                  Margin="0">
+                                <TextBlock
+                                    Grid.Column="0"
+                                    Classes="Label"
+                                    Text="Thickness" />
+                                <NumericUpDown
+                                    Grid.Column="1"
+                                    Value="{Binding StrokeThickness}"
+                                    BorderBrush="#E5E7EB"
+                                    CornerRadius="5"
+                                    ShowButtonSpinner="False"
+                                    Padding="8,8,0,0"/>
+                            </Grid>
+                        </Border>
+                        <Border
+                            BorderBrush="#E5E7EB"
+                            BorderThickness="0,0, 0, 1"
+                            Padding="20, 7">
+                            <Grid ColumnDefinitions="*,*"
+                                  Margin="0">
+                                <TextBlock Grid.Column="0" Classes="Label" Text="Color" Margin="0,10,0,6"/>
+                                <ColorPicker
+                                    Grid.Column="1"
+                                    Color="{Binding StrokeColor}"
+                                    HorizontalAlignment="Right"/>
+                            </Grid>
+                        </Border>
+                        <Border
+                            BorderBrush="#E5E7EB"
+                            BorderThickness="0,0,0,1"
+                            Padding="20, 7">
+                            <Grid ColumnDefinitions="*,*"
+                                  Margin="0">
+                                <TextBlock
+                                    Grid.Column="0"
+                                    Classes="Label"
+                                    Text="Stroke join" />
+                                <ComboBox Grid.Column="1" 
+                                          ItemsSource="{Binding AvailableStrokeJoins}"
+                                          SelectedItem="{Binding SelectedStrokeJoin}"
+                                          HorizontalAlignment="Stretch" />
+                            </Grid>
+                        </Border>
+                        <Border
+                            BorderBrush="#E5E7EB"
+                            BorderThickness="0,0,0,1"
+                            Padding="20, 7">
+                            <Grid ColumnDefinitions="*,*"
+                                  Margin="0">
+                                <TextBlock
+                                    Grid.Column="0"
+                                    Classes="Label"
+                                    Text="Stroke cap" />
+                                <ComboBox Grid.Column="1" 
+                                          ItemsSource="{Binding AvailableStrokeCaps}"
+                                          SelectedItem="{Binding SelectedStrokeCap}"
+                                          HorizontalAlignment="Stretch"/>
                             </Grid>
                         </Border>
                     </StackPanel>
@@ -104,8 +175,7 @@
                                 <ComboBox Grid.Column="1" 
                                           ItemsSource="{Binding AvailableShapes}"
                                           SelectedItem="{Binding SelectedShapeType}"
-                                          HorizontalAlignment="Stretch"
-                                          Padding="8,8,0,0"/>
+                                          HorizontalAlignment="Stretch"/>
                             </Grid>
                         </Border>
                         <Border
