--- a/src/Tessera.App/Views/DrawingPageView.axaml
+++ b/src/Tessera.App/Views/DrawingPageView.axaml
@@ -108,69 +108,71 @@
             BorderBrush="#E5E7EB"
             BorderThickness="1"
             BoxShadow="0 1 3 0 #10000000">
-           <Grid ClipToBounds="True">
-               <Canvas IsHitTestVisible="False"> 
-                   <Rectangle Canvas.Left="{Binding SelectionX}"
-                              Canvas.Top="{Binding SelectionY}"
-                              Width="{Binding SelectionWidth}"
-                              Height="{Binding SelectionHeight}"
-                              IsVisible="{Binding IsSelectionVisible}"
-                              Stroke="Red" StrokeThickness="1" Fill="#33FF0000"/>
-               </Canvas>
-               <c:DotGridControl 
-                   IsHitTestVisible="False" />
-               <ItemsControl ItemsSource="{Binding Shapes}" >
-                   <ItemsControl.Styles>
-                       <Style Selector="ContentPresenter" x:DataType="vm:ShapeBase">
-                           <Setter Property="Canvas.Left" Value="{Binding X}"/>
-                           <Setter Property="Canvas.Top" Value="{Binding Y}"/>
-                       </Style>
-                   </ItemsControl.Styles>
-                   <ItemsControl.ItemsPanel>
-                       <ItemsPanelTemplate>
-                           <Canvas x:Name="DrawingOverlayCanvas"
-                                   Background="Transparent"
-                                   Initialized="Canvas_OnInitialized">
-                           </Canvas>
-                       </ItemsPanelTemplate>
-                   </ItemsControl.ItemsPanel>
-                   <ItemsControl.ItemTemplate>
-                       <dt:ShapeTemplateSelector>
-                           <DataTemplate x:Key="EllipseShape" DataType="{x:Type vm:EllipseShape}">
-                               <Ellipse
-                                   Width="{Binding Width}"
-                                   Height="{Binding Height}"
-                                   Stroke="{Binding StrokeColor}"
-                                   Fill="{Binding Color}"
-                                   StrokeThickness="{Binding StrokeThickness}" />
-                           </DataTemplate>
-                           <DataTemplate x:Key="LineShape" DataType="{x:Type vm:LineShape}">
-                               <Line
-                                   StartPoint="{Binding StartPoint}"
-                                   EndPoint="{Binding EndPoint}"
-                                   Stroke="{Binding StrokeColor}"
-                                   StrokeThickness="{Binding StrokeThickness}" />
-                           </DataTemplate> 
-                           <DataTemplate x:Key="PolylineShape" DataType="{x:Type vm:PolylineShape}">
-                               <Polyline
-                                   Points="{Binding Points}"
-                                   Stroke="{Binding StrokeColor}"
-                                   StrokeThickness="{Binding StrokeThickness}"
-                                   StrokeJoin="{Binding StrokeJoin}"
-                                   StrokeLineCap="{Binding StrokeCap}"/>
-                           </DataTemplate> 
-                           <DataTemplate x:Key="RectangleShape" DataType="{x:Type vm:RectangleShape}">
-                               <Rectangle
-                                   Width="{Binding Width}"
-                                   Height="{Binding Height}"
-                                   Stroke="{Binding StrokeColor}"
-                                   Fill="{Binding Color}"
-                                   StrokeThickness="{Binding StrokeThickness}" />
-                           </DataTemplate> 
-                       </dt:ShapeTemplateSelector>
-                   </ItemsControl.ItemTemplate>
-               </ItemsControl>
-           </Grid>
+            <Grid ClipToBounds="True">
+                <Panel Background="Transparent"
+                       PointerPressed="OnPointerPressed"
+                       PointerMoved="OnPointerMoved"
+                       PointerReleased="OnPointerReleased">
+                    <Panel Name="MovingWorld">
+                        <Panel.RenderTransform>
+                            <TranslateTransform X="{Binding PanX}" Y="{Binding PanY}"/>
+                        </Panel.RenderTransform>
+                    </Panel>
+                    <ItemsControl ItemsSource="{Binding Shapes}">
+                        <ItemsControl.Styles>
+                            <Style Selector="ContentPresenter" x:DataType="vm:ShapeBase">
+                                <Setter Property="Canvas.Left" Value="{Binding X}"/>
+                                <Setter Property="Canvas.Top" Value="{Binding Y}"/>
+                            </Style>
+                        </ItemsControl.Styles>
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <Canvas x:Name="DrawingOverlayCanvas"
+                                        Background="Transparent"
+                                        Initialized="Canvas_OnInitialized">
+                                </Canvas>
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                        <ItemsControl.ItemTemplate>
+                            <dt:ShapeTemplateSelector>
+                                <DataTemplate x:Key="EllipseShape" DataType="{x:Type vm:EllipseShape}">
+                                    <Ellipse
+                                        Width="{Binding Width}"
+                                        Height="{Binding Height}"
+                                        Stroke="{Binding StrokeColor}"
+                                        Fill="{Binding Color}"
+                                        StrokeThickness="{Binding StrokeThickness}" />
+                                </DataTemplate>
+                                <DataTemplate x:Key="LineShape" DataType="{x:Type vm:LineShape}">
+                                    <Line
+                                        StartPoint="{Binding StartPoint}"
+                                        EndPoint="{Binding EndPoint}"
+                                        Stroke="{Binding StrokeColor}"
+                                        StrokeThickness="{Binding StrokeThickness}" />
+                                </DataTemplate> 
+                                <DataTemplate x:Key="PolylineShape" DataType="{x:Type vm:PolylineShape}">
+                                    <Polyline
+                                        Points="{Binding Points}"
+                                        Stroke="{Binding StrokeColor}"
+                                        StrokeThickness="{Binding StrokeThickness}"
+                                        StrokeJoin="{Binding StrokeJoin}"
+                                        StrokeLineCap="{Binding StrokeCap}"/>
+                                </DataTemplate> 
+                                <DataTemplate x:Key="RectangleShape" DataType="{x:Type vm:RectangleShape}">
+                                    <Rectangle
+                                        Width="{Binding Width}"
+                                        Height="{Binding Height}"
+                                        Stroke="{Binding StrokeColor}"
+                                        Fill="{Binding Color}"
+                                        StrokeThickness="{Binding StrokeThickness}" />
+                                </DataTemplate> 
+                            </dt:ShapeTemplateSelector>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+        
+                   
+                </Panel>
+            </Grid>
         </Border>
         <Border 
             Grid.Row="0"
@@ -182,8 +184,20 @@
             Margin="5"
             CornerRadius="8"
             BoxShadow="0 1 3 0 #10000000">
-            <c:CanvasToolSettings
-                ToolSettings="{Binding SelectedToolItem.ToolSettings}" />
+            <Grid RowDefinitions="Auto,*">
+                <c:CanvasToolSettings
+                    ToolSettings="{Binding SelectedToolItem.ToolSettings}" />
+                <StackPanel Grid.Row="1">
+                    <WrapPanel>
+                        <TextBlock Text="PanX -> " />
+                        <TextBlock Text="{Binding PanX}" />
+                    </WrapPanel>
+                    <WrapPanel>
+                        <TextBlock Text="PanY -> " />
+                        <TextBlock Text="{Binding PanY}" />
+                    </WrapPanel>
+                </StackPanel>
+            </Grid>
         </Border>
     </Grid>
 </UserControl>
